--- a/layout/scssVariables/_variableColor.scss
+++ b/layout/scssVariables/_variableColor.scss
@@ -6,11 +6,11 @@ $info-primary-pressed-color: #008486;
 $info-primary-tag-bg-color: #f2fbfe;
 $info-primary-border-color: #99dff9;
 
-$primary-color: #f58220;
-$primary-color-hover: #f7a158;
-$primary-color-pressed: #d16a12;
-$primary-color-tag-bg: #fef3e9;
-$primary-color-border: #fac79b;
+$primary-color: #ec07fc;
+$primary-color-hover: #f56cff;
+$primary-color-pressed: #c038c0;
+$primary-color-tag-bg: #fcd9ff;
+$primary-color-border: #f88fff;
 
 $secondary-color-1: #00aeef;
 $secondary-color-1-hover: #40c2f3;
