--- a/layout/sass/_footerAndNavbar.module.scss
+++ b/layout/sass/_footerAndNavbar.module.scss
@@ -67,5 +67,6 @@
 
 .navbarTheme {
   position: sticky;
-  background-color: $primary-color;
+  background-color: $primary-color-bg;
+  color: $primary-color;
 }
