--- a/layout/scssVariables/_variableColor.scss
+++ b/layout/scssVariables/_variableColor.scss
@@ -6,11 +6,11 @@ $info-primary-pressed-color: #008486;
 $info-primary-tag-bg-color: #f2fbfe;
 $info-primary-border-color: #99dff9;
 
-$primary-color: #ec07fc;
-$primary-color-hover: #f56cff;
-$primary-color-pressed: #c038c0;
-$primary-color-tag-bg: #fcd9ff;
-$primary-color-border: #f88fff;
+$primary-color: #e40137;
+$primary-color-hover: #ffe7ea;
+$primary-color-pressed: #f7b7c7;
+$primary-color-bg: #fce5eb;
+$primary-color-border: #f7b7c7;
 
 $secondary-color-1: #00aeef;
 $secondary-color-1-hover: #40c2f3;
