update navbar responsive

--- a/layout/scssVariables/_variableSize.scss
+++ b/layout/scssVariables/_variableSize.scss
@@ -100,6 +100,22 @@ $navbarAvatarHeight4: #{$navbarHeight4 / 1.5};
 $navbarAvatarHeight5: #{$navbarHeight5 / 1.5};
 $navbarAvatarHeight6: #{$navbarHeight6 / 1.5};
 
+/* Navbar title */
+$navbarTitleSize1: 12px;
+$navbarTitleSize2: 14px;
+$navbarTitleSize3: 18px;
+$navbarTitleSize4: 20px;
+$navbarTitleSize5: 22px;
+$navbarTitleSize6: 24px;
+
+/* Navbar item */
+$navbarItemSize1: 11px;
+$navbarItemSize2: 12px;
+$navbarItemSize3: 13px;
+$navbarItemSize4: 14px;
+$navbarItemSize5: 15px;
+$navbarItemSize6: 16px;
+
 /* Layout */
 $layoutMenuWidth: 280px;
 
